@@ -1,5 +1,6 @@
 package com.example.demo.serviceimpl;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
@@ -25,98 +26,102 @@ public class SeekerServiceImpl implements SeekerService {
 	public Seeker seekerAdd(Seeker seeker) {
 		
 		try {
-		if (StringUtils.isBlank(seeker.getName())) {
-			throw new BusinessException("Name Field is empty");
+			if(seeker.getName().isBlank())
+			{
+				throw new BusinessException("pls fill all fields ");
+			}
+			LocalDate localDate= LocalDate.now();
+			
+			seeker.setCreatedAt(localDate);
+			return seekerDao.save(seeker);
 		}
-			Seeker seekerReturn = seekerDao.save(seeker);
-			return seekerReturn;
-			}
-		
+			
 			catch (IllegalArgumentException e) {
-			    throw new BusinessException(" whole entity is empty  "+e.getMessage());
-			}
-		
-		    catch (Exception e) {
-			throw new BusinessException("something went wrong 2 ");
-		}		
+			    throw new BusinessException("all fields is empty ");
+			}	
 	}
-    	
-	
-	
-//	try {
-//		if (StringUtils.isBlank(seeker.getName())) {
-//			throw new BusinessException("Name Field is empty");
-//		}
-	
-	
+ 
 	
 	@Override
 	public Seeker seekerGetById(Integer id) {
 		try {
-		Optional<Seeker> seeker = seekerDao.findById(id);
-          return seeker.get();
+			return seekerDao.findById(id).get();
 		}
 		catch(IllegalArgumentException e)
 		{
-			throw new BusinessException("901","pls put valid arguments in the block"+e.getMessage());
+			throw new BusinessException("pls put any id");
 		}
 		catch(NoSuchElementException e)
 		{
-			throw new BusinessException("902","No any object is present "+ e.getMessage());
-		}
-		catch(Exception e)
-		{
-			throw new BusinessException("903","something went wrong in buissnes layer"+e.getMessage());
-		}
-		
+			throw new BusinessException("Seeker Not Found");
+		}		
 	}
 	
 	
-//	@Override
-//	public Seeker seekerGetById(Integer id) {
-//		try {
-//		Optional<Seeker> seeker = seekerDao.findById(id);
-//		if (seeker.isPresent()) {
-//			throw new EntityNotFoundException();
-//		}
-//		return seeker.get();
-//	}
-	
-
 	@Override
 	public List<Seeker> showSeeker() {
 		try {
 		List<Seeker> seekerList = seekerDao.findAll();
-		if (CollectionUtils.isEmpty(seekerList)) {
-			throw new BusinessException("204","whole list is empty");
+		return seekerList;
 		}
-         return seekerList;
-		}catch (Exception e) {
-			throw new BusinessException("500","Something went wrong show seeker");
+		catch(NoSuchElementException e) {
+			throw new BusinessException("No Data Is Present");
 		}
+		
+	}
+
+	@Override
+	public Seeker getByEmail(String email) {
+		List<Seeker> list=showSeeker();
+		for(Seeker li: list)
+		{
+			if(li.getEmail().equals(email))
+			{
+				return li;
+			}
+		}
+		return null;
 	}
 	
-	@Override
-	public String seekerDeleteById(Integer id) {
-		try {
-		Optional<Seeker> seeker = seekerDao.findById(id);
-		if (seeker.isPresent()) {
-			seekerDao.deleteById(id);
-		}
-		return "Successfully Deleted";
-		}
-		catch(NoSuchElementException e){
-			throw new BusinessException("204","NO Seeker Found on this Id");
-		}
-		catch(IllegalArgumentException e)
+	
+	
+	
+//	
+//	@Override
+//	public String seekerDeleteById(Integer id) {
+//		try {
+//		Optional<Seeker> seeker = seekerDao.findById(id);
+//		if (seeker.isPresent()) {
+//			seekerDao.deleteById(id);
+//		}
+//		return "Successfully Deleted";
+//		}
+//		catch(NoSuchElementException e){
+//			throw new BusinessException("204","NO Seeker Found on this Id");
+//		}
+//		catch(IllegalArgumentException e)
+//		{
+//			throw new BusinessException("402","pls input right element");
+//		}
+//		catch(Exception e)
+//		{
+//			throw new BusinessException("500","Something went wrong");
+//		}
+//
+//	}
+	
+	public Seeker updateSeeker(int id, String name, String role)	{
+		
+		Optional<Seeker> seeker= seekerDao.findById(id);
+		
+		if(seeker.isPresent())
 		{
-			throw new BusinessException("402","pls input right element");
+			Seeker seeker1=seeker.get();
+			seeker1.setName(name);
+			seeker1.setRole(role);
+			return seekerDao.save(seeker1);
 		}
-		catch(Exception e)
-		{
-			throw new BusinessException("500","Something went wrong");
-		}
-
+		return null;		
 	}
 
 }
